Remove some setclasspath.sh references